Backend/k8s-manifests/stock-pipeline/Airflow-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
  namespace: stock-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  template:
    metadata:
      labels:
        app: airflow
    spec:
      containers:
      - name: airflow
        image: hdm08/backend-airflow:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: dags
          mountPath: /opt/airflow/dags
        - name: logs
          mountPath: /opt/airflow/logs
        - name: ca-cert
          mountPath: /ca.pem
          subPath: ca.pem
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 5
      volumes:
      - name: dags
        persistentVolumeClaim:
          claimName: airflow-claim1
      - name: logs
        emptyDir: {}
      - name: ca-cert
        configMap:
          name: airflow-cm0-configmap
