Backend/k8s-manifests/stock-pipeline/Data-API_service-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-api-service
  namespace: stock-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-api-service
  template:
    metadata:
      labels:
        app: data-api-service
    spec:
      containers:
      - name: data-api-service
        image: hdm08/backend-data-api-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8006
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      restartPolicy: Always
