Backend/k8s-manifests/stock-pipeline/Data-Collector-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-collector
  namespace: stock-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-collector
  template:
    metadata:
      labels:
        app: data-collector
    spec:
      containers:
      - name: data-collector
        image: hdm08/backend-data-collector:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 5
