Backend/k8s-manifests/stock-pipeline/Data-Processor-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-processor
  namespace: stock-pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-processor
  template:
    metadata:
      labels:
        app: data-processor
    spec:
      containers:
      - name: data-processor
        image: hdm08/backend-data-processor:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
        livenessProbe:
          httpGet:
            path: /health
            port: 8001
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 5
