Backend/k8s-manifests/stock-pipeline/Airflow-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow
  namespace: stock-pipeline
spec:
  selector:
    app: airflow
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
