Backend/k8s-manifests/stock-pipeline/Data-API-Service-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-api-service
  namespace: stock-pipeline
spec:
  selector:
    app: data-api-service
  ports:
  - protocol: TCP
    port: 8006
    targetPort: 8006
  type: ClusterIP
