Backend/k8s-manifests/stock-pipeline/Data-Collector-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-collector
  namespace: stock-pipeline
spec:
  selector:
    app: data-collector
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
