Backend/k8s-manifests/stock-pipeline/Data-Processor-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-processor
  namespace: stock-pipeline
spec:
  selector:
    app: data-processor
  ports:
  - name: http
    protocol: TCP
    port: 8001
    targetPort: 8001
  type: ClusterIP
