Backend/k8s-manifests/stock-pipeline/Database-Writer-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-writer
  namespace: stock-pipeline
spec:
  selector:
    app: database-writer
  ports:
  - name: http
    protocol: TCP
    port: 8002
    targetPort: 8002
  type: ClusterIP
