Backend/k8s-manifests/stock-pipeline/File-Writer-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-writer
  namespace: stock-pipeline
spec:
  selector:
    app: file-writer
  ports:
  - name: http
    protocol: TCP
    port: 8003
    targetPort: 8003
  type: ClusterIP
